begin bug fix z-index

--- a/src/styles/flaggables.css
+++ b/src/styles/flaggables.css
@@ -12,3 +12,7 @@
   z-index: 10; /* for interactive elements */
   padding: 30px !important; /* for usability */
 }
+
+.flaggable.flat {
+  z-index: 0;
+}
